Incorrect overlay scrollbar position in RTL-direction container
Categories
(Core :: Layout: Scrolling and Overflow, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox112 | --- | unaffected |
firefox113 | + | verified |
firefox114 | + | verified |
People
(Reporter: bugzilla, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(4 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:109.0) Gecko/20100101 Firefox/113.0
Steps to reproduce:
Display a container with direction set to RTL, with a vertical scrollbar, e.g.
https://bug720046.bmoattachments.org/attachment.cgi?id=590389
(using the first div).
Actual results:
Scrollbar is displayed on the left side of container
Expected results:
Scrollbar is displayed on the left side of container, but offset by a scrollbar width.
Simplified test case:
[Tracking Requested - why for this release]:
This is a regression from firefox112, now occurring in firefox113
Comment 6•2 years ago
|
||
Hmm, I wasn't able to reproduce. I tested in nightly 2023-01-01, 2023-01-15, 2023-02-01, 2023-02-15, 2023-03-01, 2023-03-15, 2023-04-01, 2023-04-15. As well as in the latest 113 beta.
There's probably some setting I'm not changing that you have? Maybe a system language or rtl setting? Can you reproduce in a fresh profile or on another machine?
Same with a fresh profile.
Hardware: MBP 16" 2021
OS: MacOS Ventura (version 13.3.1 (22E261))
Same with https://live.browserstack.com with any recent Macos version + Firefox 113.
Comment 9•2 years ago
|
||
Ah! I know what the difference is now. I have always show scrollbars on. Switching that back to overlay scrollbars and I can reproduce.
Updated•2 years ago
|
Updated•2 years ago
|
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 10•2 years ago
|
||
[Tracking Requested - why for this release]: Very annoying regression for RTL users. There's a workaround on non-Android platforms (turn off overlay scrollbars), but it'd be unfortunate to ship this.
Comment 11•2 years ago
|
||
Set release status flags based on info from the regressing bug 1824236
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 12•2 years ago
|
||
It was just a silly mistake. In the rtl case the position is already the
start, we don't need to move it into the box.
Comment 13•2 years ago
|
||
Comment 14•2 years ago
|
||
bugherder |
Updated•2 years ago
|
Comment 15•2 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox113
towontfix
.
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 16•2 years ago
|
||
Comment on attachment 9329854 [details]
Bug 1828879 - Fix position of RTL vertical overlay scrollbars. r=tnikkel,#layout
Beta/Release Uplift Approval Request
- User impact if declined: comment 0
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Trivial change.
- String changes made/needed: none
- Is Android affected?: Yes
Assignee | ||
Updated•2 years ago
|
Comment 17•2 years ago
|
||
Comment on attachment 9329854 [details]
Bug 1828879 - Fix position of RTL vertical overlay scrollbars. r=tnikkel,#layout
Approved for 113.0b8.
Comment 18•2 years ago
|
||
bugherder uplift |
Updated•2 years ago
|
Comment 19•2 years ago
|
||
Reproduced with Fx 114.0a1 (2023-04-19) on macOS 13.3.
Verified fixed with Fx 114.0a1 (2023-04-25) and Fx 113.0b8 on macOS 13.3.
Description
•