Bug 1828879 - Fix position of RTL vertical overlay scrollbars. r=tnikkel,layout-reviewers a=RyanVM

It was just a silly mistake. In the rtl case the position is already the
start, we don't need to move it into the box.

Differential Revision: https://phabricator.services.mozilla.com/D176229